--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev:ssr": "ng run frontend:serve-ssr",
+    "dev:ssr": "npx nx run frontend:serve-ssr",
     "serve:ssr": "node dist/frontend/server/main.js",
-    "build:ssr": "ng build && ng run frontend:server",
-    "prerender": "ng run frontend:prerender",
-    "prebuild:ssr": "ngcc"
+    "build:ssr": "npx nx build frontend",
+    "_prerender": "npx nx run frontend:prerender",
+    "_prebuild:ssr": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -42,7 +42,7 @@
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.2.0",
+    "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "~16.2.0",
     "@angular/language-service": "~16.2.0",
     "@nestjs/schematics": "^10.0.1",
